feat: 4-layer watermark system with spread spectrum (UNTESTED)
MAJOR CHANGES - REQUIRES PRODUCTION TESTING:

New Watermark Layers:
- Layer 1: Billboard (EXIF/PNG tEXt) - public metadata
- Layer 2: DNA (LSB steganography) - lossless only
- Layer 3: The Spread (DCT spread spectrum) - survives JPEG/screenshots
- Layer 4: Forensic (AES-256 encrypted) - operator accountability

New Files:
- src/core/spread-spectrum.ts - DCT spread spectrum watermarking
- src/core/forensic-crypto.ts - AES-256 accountability encryption
- src/core/standard-metadata.ts - EXIF/PNG metadata injection
- docs/WATERMARK_ARCHITECTURE.md - full technical documentation

Deployment:
- Dockerfile + cloudbuild.yaml for Cloud Run
- Secret Manager integration for master key
- Setup wizard and preflight scripts

UI Updates:
- Brutal honesty about what survives/doesn't survive
- Forensic unlock panel for operator key entry
- Layer status display in verification results

 UNTESTED: Spread spectrum extraction needs real-world validation
 UNTESTED: Forensic payload survival through JPEG compression
 UNTESTED: Social media upload survival rates

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ node_modules/
 # Build output
 dist/
 
+# Build info (generated per deployment)
+build-info.json
+
 # Environment
 .env
 .env.local
@@ -31,3 +34,39 @@ test-output/
 # Temporary files
 *.tmp
 *.temp
+
+# ============================================================================
+# SECRETS - NEVER COMMIT THESE
+# ============================================================================
+
+# Deployment config (contains account/project info)
+deploy.config.json
+
+# GCP Service Account Keys (CRITICAL - never commit!)
+*.json.key
+service-account*.json
+credentials*.json
+gcp-key*.json
+
+# Actual deployment scripts with real values (use .template versions)
+# deploy.ps1 is safe (no secrets), but if you add secrets, ignore it
+# setup-gcp.ps1 is safe (no secrets)
+
+# Any file with "secret" in the name
+*secret*
+*SECRET*
+
+# Private keys
+*.pem
+*.key
+*.p12
+
+# ============================================================================
+# DEPLOYMENT STATE (local only)
+# ============================================================================
+
+# Cloud Build logs
+cloudbuild-*.log
+
+# Docker cache
+.docker/
