--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@types/archiver": "^7.0.0",
+    "archiver": "^7.0.1",
     "express": "^5.0.0",
     "multer": "^2.0.0",
+    "piexifjs": "^1.0.6",
     "pngjs": "^7.0.0",
     "sharp": "^0.33.5"
   },
