feat: Truthful enforcement + Preview deployment workflow
- preflight: Now fails on warnings (not just exit code)
- lint: Now checks src/ AND web/ (no hidden errors)
- web: Exposed functions to window.* for onclick handlers
- verifier: Removed unused imports
- signing-core: Fixed non-null assertion with proper guard

New deployment workflow:
- deploy-preview.ps1: Deploy without traffic for testing
- deploy-promote.ps1: Shift traffic to preview (supports gradual)
- deploy-rollback.ps1: Emergency revert to previous
- deploy-status.ps1: Show current deployment state

Validated: Heaven (0 violations) + App preflight (0 errors/warnings)

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ npm-debug.log*
 # Preflight marker (local state)
 .preflight-passed
 
+# Deployment state (local tracking)
+.preview-revision
+.last-live-revision
+
 # Test output
 coverage/
 test-output/
