feat: Professional deployment patterns - add deploy-checklist.ps1 for version bumping, documentation honesty checks, and accountability logging - add devdocs/workingdocs/ for engineer experiments (gitignored) - add devdocs/deploy-logs/ for deployment accountability trail (gitignored) - update DEPLOYMENT.md with full workflow documentation

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,14 @@ npm-debug.log*
 .preview-revision
 .last-live-revision
 
+# Working docs (engineer's local experiments)
+devdocs/workingdocs/*
+!devdocs/workingdocs/README.md
+
+# Deploy logs (local accountability trail)
+devdocs/deploy-logs/*
+!devdocs/deploy-logs/README.md
+
 # Test output
 coverage/
 test-output/
