docs: honest documentation about what elaraSign actually does
- Removed claims about steganography/spread-spectrum (doesn't survive screenshot)
- Updated to accurately describe metadata-based provenance system
- PDF: metadata embedding, NOT cryptographic digital signatures (roadmap)
- Images: EXIF/PNG metadata + sidecar JSON, survives basic editing
- Updated web UI, LEGAL_NOTICE.md, README.md, test-files README
- Fixed deploy.ps1 preview workflow output

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,9 @@ gcp-key*.json
 *.key
 *.p12
 
+# Certificate directory (auto-generated, contains secrets)
+certs/
+
 # ============================================================================
 # DEPLOYMENT STATE (local only)
 # ============================================================================
