--- a/package.json
+++ b/package.json
@@ -45,10 +45,14 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@signpdf/placeholder-pdf-lib": "^3.3.0",
+    "@signpdf/signer-p12": "^3.3.0",
+    "@signpdf/signpdf": "^3.3.0",
     "@types/archiver": "^7.0.0",
     "archiver": "^7.0.1",
     "express": "^5.0.0",
     "multer": "^2.0.0",
+    "node-forge": "^1.3.3",
     "pdf-lib": "^1.17.1",
     "piexifjs": "^1.0.6",
     "pngjs": "^7.0.0",
@@ -59,6 +63,7 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^25.0.0",
+    "@types/node-forge": "^1.3.14",
     "@types/pngjs": "^6.0.5",
     "@types/supertest": "^6.0.3",
     "supertest": "^7.2.2",
