--- a/package.json
+++ b/package.json
@@ -1,74 +1,74 @@
 {
-  "name": "elara-sign",
-  "version": "2.1.0",
-  "type": "module",
-  "description": "Universal file signing service - embed provenance metadata into images, PDFs, audio, and video",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "bin": {
-    "elara-sign": "dist/cli/index.js"
-  },
-  "scripts": {
-    "setup": "powershell -ExecutionPolicy Bypass -File ./first-time-setup.ps1",
-    "dev": "npx kill-port 3010 2>nul & tsx watch src/cloud/server.ts",
-    "dev:clean": "powershell -Command \"Get-NetTCPConnection -LocalPort 3010 -ErrorAction SilentlyContinue | ForEach-Object { Stop-Process -Id $_.OwningProcess -Force -ErrorAction SilentlyContinue }\" & tsx watch src/cloud/server.ts",
-    "build": "tsc",
-    "build:cli": "tsc && chmod +x dist/cli/index.js",
-    "test": "tsx src/testing/test-runner.ts",
-    "test:help": "tsx src/testing/test-runner.ts --help",
-    "helper": "tsx src/testing/helper.ts",
-    "helper:status": "tsx src/testing/helper.ts status",
-    "helper:diagnose": "tsx src/testing/helper.ts diagnose",
-    "lint": "biome check src/ web/",
-    "lint:fix": "biome check --write src/ web/",
-    "format": "biome format --write src/ web/"
-  },
-  "keywords": [
-    "image-signing",
-    "pdf-signing",
-    "audio-signing",
-    "video-signing",
-    "provenance",
-    "watermark",
-    "content-authenticity",
-    "ai-generated",
-    "elara",
-    "openelara"
-  ],
-  "author": "OpenElara",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openelara/elara-sign.git"
-  },
-  "engines": {
-    "node": ">=20.0.0"
-  },
-  "dependencies": {
-    "@signpdf/placeholder-pdf-lib": "^3.3.0",
-    "@signpdf/signer-p12": "^3.3.0",
-    "@signpdf/signpdf": "^3.3.0",
-    "@types/archiver": "^7.0.0",
-    "archiver": "^7.0.1",
-    "express": "^5.0.0",
-    "multer": "^2.0.0",
-    "node-forge": "^1.3.3",
-    "pdf-lib": "^1.17.1",
-    "piexifjs": "^1.0.6",
-    "pngjs": "^7.0.0",
-    "sharp": "^0.33.5"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^2.0.0",
-    "@types/express": "^5.0.0",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^25.0.0",
-    "@types/node-forge": "^1.3.14",
-    "@types/pngjs": "^6.0.5",
-    "@types/supertest": "^6.0.3",
-    "supertest": "^7.2.2",
-    "tsx": "^4.19.0",
-    "typescript": "^5.6.0",
-    "vitest": "^4.0.0"
-  }
+	"name": "elaraSign",
+	"version": "2.1.0",
+	"type": "module",
+	"description": "Universal file signing service - embed provenance metadata into images, PDFs, audio, and video",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"bin": {
+		"elaraSign": "dist/cli/index.js"
+	},
+	"scripts": {
+		"setup": "bash setup.sh",
+		"dev": "npx kill-port 3010 2>nul & tsx watch src/cloud/server.ts",
+		"dev:clean": "powershell -Command \"Get-NetTCPConnection -LocalPort 3010 -ErrorAction SilentlyContinue | ForEach-Object { Stop-Process -Id $_.OwningProcess -Force -ErrorAction SilentlyContinue }\" & tsx watch src/cloud/server.ts",
+		"build": "tsc",
+		"build:cli": "tsc && chmod +x dist/cli/index.js",
+		"test": "tsx src/testing/test-runner.ts",
+		"test:help": "tsx src/testing/test-runner.ts --help",
+		"helper": "tsx src/testing/helper.ts",
+		"helper:status": "tsx src/testing/helper.ts status",
+		"helper:diagnose": "tsx src/testing/helper.ts diagnose",
+		"lint": "biome check src/ web/",
+		"lint:fix": "biome check --write src/ web/",
+		"format": "biome format --write src/ web/"
+	},
+	"keywords": [
+		"image-signing",
+		"pdf-signing",
+		"audio-signing",
+		"video-signing",
+		"provenance",
+		"watermark",
+		"content-authenticity",
+		"ai-generated",
+		"elara",
+		"openelara"
+	],
+	"author": "OpenElara",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/applymytech/elaraSign.git"
+	},
+	"engines": {
+		"node": ">=24.0.0"
+	},
+	"dependencies": {
+		"@signpdf/placeholder-pdf-lib": "^3.3.0",
+		"@signpdf/signer-p12": "^3.3.0",
+		"@signpdf/signpdf": "^3.3.0",
+		"@types/archiver": "^7.0.0",
+		"archiver": "^7.0.1",
+		"express": "^5.2.1",
+		"multer": "^2.0.2",
+		"node-forge": "^1.3.3",
+		"pdf-lib": "^1.17.1",
+		"piexifjs": "^1.0.6",
+		"pngjs": "^7.0.0",
+		"sharp": "^0.34.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.3.11",
+		"@types/express": "^5.0.6",
+		"@types/multer": "^2.0.0",
+		"@types/node": "^25.0.9",
+		"@types/node-forge": "^1.3.14",
+		"@types/pngjs": "^6.0.5",
+		"@types/supertest": "^6.0.3",
+		"supertest": "^7.2.2",
+		"tsx": "^4.21.0",
+		"typescript": "^5.9.3",
+		"vitest": "^4.0.17"
+	}
 }
