--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,9 @@ substitutions:
   _SERVICE_NAME: elara-sign
   _REGION: us-central1
   _REPOSITORY: elara-sign-repo
+  _FIREBASE_SENDER_ID: ''
+  _ADMIN_EMAIL: ''
+  _SERVICE_EMAIL: ''
 
 steps:
   # Step 1: Build the Docker image
@@ -57,6 +60,19 @@ steps:
       - '60s'
       - '--set-env-vars'
       - 'NODE_ENV=production'
+      # Firebase config (from Secret Manager for convenience)
+      - '--set-secrets'
+      - 'FIREBASE_API_KEY=elarasign-firebase-api-key:latest'
+      - '--set-secrets'
+      - 'FIREBASE_APP_ID=elarasign-firebase-app-id:latest'
+      - '--set-env-vars'
+      - 'FIREBASE_PROJECT_ID=${PROJECT_ID}'
+      - '--set-env-vars'
+      - 'FIREBASE_MESSAGING_SENDER_ID=${_FIREBASE_SENDER_ID}'
+      - '--set-env-vars'
+      - 'ELARASIGN_ADMIN_EMAIL=${_ADMIN_EMAIL}'
+      - '--set-env-vars'
+      - 'ELARASIGN_SERVICE_EMAIL=${_SERVICE_EMAIL}'
       # Bind forensic master key from Secret Manager
       # This secret is created ONCE via: scripts/setup-forensic-key.ps1
       # Same key persists across all deployments (never regenerate!)
@@ -68,6 +84,10 @@ steps:
       - 'ELARASIGN_P12_BASE64=elarasign-p12-certificate:latest'
       - '--set-secrets'
       - 'ELARASIGN_P12_PASSWORD=elarasign-p12-password:latest'
+      # Deploy with 0% traffic - requires manual promotion
+      - '--no-traffic'
+      - '--tag'
+      - 'preview'
 
 images:
   - '${_REGION}-docker.pkg.dev/${PROJECT_ID}/${_REPOSITORY}/${_SERVICE_NAME}:${SHORT_SHA}'
