--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "elaraSign",
-	"version": "2.1.0",
+	"name": "elarasign",
+	"version": "3.0.0",
 	"type": "module",
 	"description": "Universal file signing service - embed provenance metadata into images, PDFs, audio, and video",
 	"main": "dist/index.js",
@@ -9,12 +9,20 @@
 		"elaraSign": "dist/cli/index.js"
 	},
 	"scripts": {
-		"setup": "bash setup.sh",
-		"dev": "npx kill-port 3010 2>nul & tsx watch src/cloud/server.ts",
-		"dev:clean": "powershell -Command \"Get-NetTCPConnection -LocalPort 3010 -ErrorAction SilentlyContinue | ForEach-Object { Stop-Process -Id $_.OwningProcess -Force -ErrorAction SilentlyContinue }\" & tsx watch src/cloud/server.ts",
+		"setup": "tsx scripts/setup.ts",
+		"preflight": "tsx scripts/preflight.ts",
+		"deploy": "tsx scripts/deploy.ts",
+		"traffic": "tsx scripts/traffic.ts",
+		"dev": "tsx src/cloud/server.ts",
+		"dev:full": "firebase emulators:start --only firestore",
 		"build": "tsc",
 		"build:cli": "tsc && chmod +x dist/cli/index.js",
 		"test": "tsx src/testing/test-runner.ts",
+		"test:unit": "vitest",
+		"test:unit:watch": "vitest --watch",
+		"test:unit:coverage": "vitest --coverage",
+		"test:integration": "tsx src/testing/test-runner.ts",
+		"test:all": "npm run test:unit -- --run && npm run test:integration",
 		"test:help": "tsx src/testing/test-runner.ts --help",
 		"helper": "tsx src/testing/helper.ts",
 		"helper:status": "tsx src/testing/helper.ts status",
@@ -66,6 +74,7 @@
 		"@types/node-forge": "^1.3.14",
 		"@types/pngjs": "^6.0.5",
 		"@types/supertest": "^6.0.3",
+		"@vitest/coverage-v8": "^4.0.17",
 		"supertest": "^7.2.2",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.3",
